Cambio de nombre de ALU a Alu

--- a/8086VCPU/8086VCPU.csproj
+++ b/8086VCPU/8086VCPU.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alu\ALU.cs" />
+    <Compile Include="Alu\Alu.cs" />
     <Compile Include="Alu\Banderas.cs" />
     <Compile Include="CPU.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
