--- a/8086VCPU/8086VCPU.csproj
+++ b/8086VCPU/8086VCPU.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>_8086VCPU</RootNamespace>
     <AssemblyName>8086VCPU</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,13 +44,21 @@
   <ItemGroup>
     <Compile Include="Alu\Alu.cs" />
     <Compile Include="Alu\Banderas.cs" />
+    <Compile Include="Auxiliares\ConversorBinario.cs" />
+    <Compile Include="Auxiliares\Ejecucion.cs" />
     <Compile Include="CPU.cs" />
     <Compile Include="Memoria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registros\Localidad.cs" />
+    <Compile Include="Registros\ParteRegistro.cs" />
     <Compile Include="Registros\Registro.cs" />
     <Compile Include="Registros\Registros.cs" />
     <Compile Include="Registros\Variable.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Kit.Shared">
+      <Version>1.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
