--- a/Compilador/Gui.csproj
+++ b/Compilador/Gui.csproj
@@ -104,6 +104,9 @@
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Views\NavigationUserControl.cs" />
+    <Compile Include="Views\VistaRegistro.xaml.cs">
+      <DependentUpon>VistaRegistro.xaml</DependentUpon>
+    </Compile>
     <Page Include="Advertencias\WarningError.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -141,6 +144,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\VistaRegistro.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
