Ajustes para la ejecución con saltos y refactorización completa de modelo de ejecución

--- a/8086VCPU/8086VCPU.csproj
+++ b/8086VCPU/8086VCPU.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Alu\Banderas.cs" />
     <Compile Include="Auxiliares\ConversorBinario.cs" />
     <Compile Include="Auxiliares\Ejecucion.cs" />
+    <Compile Include="Auxiliares\InstruccionEjecucion.cs" />
+    <Compile Include="Auxiliares\VistaPrevia.cs" />
     <Compile Include="CPU.cs" />
     <Compile Include="Memoria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
