--- a/Compilador/Gui.csproj
+++ b/Compilador/Gui.csproj
@@ -83,6 +83,8 @@
     <Compile Include="Compilador\Fases\Analizador.cs" />
     <Compile Include="Compilador\Fases\ExpresionesRegulares.cs" />
     <Compile Include="Compilador\Fases\Token.cs" />
+    <Compile Include="Compilador\Instrucciones\Begin.cs" />
+    <Compile Include="Compilador\Instrucciones\DefineByte.cs" />
     <Compile Include="Compilador\Instrucciones\Etiqueta.cs" />
     <Compile Include="Compilador\Instrucciones\Modos\Direccionado.cs" />
     <Compile Include="Compilador\Instrucciones\Modos\Directo.cs" />
@@ -255,6 +257,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Ejemplos\Saltos.asm" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Ejemplos\Burbuja.asm" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\pause.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
