--- a/8086VCPU/8086VCPU.csproj
+++ b/8086VCPU/8086VCPU.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -51,6 +52,7 @@
     <Compile Include="CPU.cs" />
     <Compile Include="Memoria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registros\Celda.cs" />
     <Compile Include="Registros\Localidad.cs" />
     <Compile Include="Registros\ParteRegistro.cs" />
     <Compile Include="Registros\Registro.cs" />
@@ -58,8 +60,18 @@
     <Compile Include="Registros\Variable.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Kit.Shared">
-      <Version>1.0.1</Version>
+    <ProjectReference Include="..\..\..\Kit\Kit\Kit.Shared.csproj">
+      <Project>{08b66604-62dc-4c44-9aef-41b124daae33}</Project>
+      <Name>Kit.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Kit\SQLHelper\Kit.SQLHelper.csproj">
+      <Project>{3e553734-43ae-40cc-b8fe-b1e87919e3ac}</Project>
+      <Name>Kit.SQLHelper</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.ObjectModel">
+      <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
