--- a/Compilador/Gui.csproj
+++ b/Compilador/Gui.csproj
@@ -40,18 +40,6 @@
     <PackageReference Include="HandyControls">
       <Version>3.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Kit.PLC">
-      <Version>1.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Kit.Shared">
-      <Version>1.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Kit.SQLHelper">
-      <Version>1.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Kit.WPF">
-      <Version>1.0.1</Version>
-    </PackageReference>
     <PackageReference Include="Prism.DryIoc" Version="8.0.0.1909" />
   </ItemGroup>
   <ItemGroup>
@@ -86,8 +74,11 @@
     <Compile Include="Compilador\Instrucciones\Begin.cs" />
     <Compile Include="Compilador\Instrucciones\DefineByte.cs" />
     <Compile Include="Compilador\Instrucciones\Etiqueta.cs" />
-    <Compile Include="Compilador\Instrucciones\Modos\Direccionado.cs" />
+    <Compile Include="Compilador\Instrucciones\Modos\Direccionamiento.cs" />
     <Compile Include="Compilador\Instrucciones\Modos\Directo.cs" />
+    <Compile Include="Compilador\Instrucciones\Modos\Inversos\DirectoI.cs" />
+    <Compile Include="Compilador\Instrucciones\Modos\Inversos\IndexadoI.cs" />
+    <Compile Include="Compilador\Instrucciones\Modos\Inversos\IndirectoI.cs" />
     <Compile Include="Compilador\Instrucciones\Modos\Simple.cs" />
     <Compile Include="Compilador\Instrucciones\Modos\Indexado.cs" />
     <Compile Include="Compilador\Instrucciones\Modos\Indirecto.cs" />
@@ -233,6 +224,18 @@
     <EmbeddedResource Include="Ejemplos\Sumas.asm" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Kit\Kit.WPF\Kit.WPF.csproj">
+      <Project>{7ad59b8d-fae8-4018-95bd-540156ee43f7}</Project>
+      <Name>Kit.WPF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Kit\Kit\Kit.Shared.csproj">
+      <Project>{08b66604-62dc-4c44-9aef-41b124daae33}</Project>
+      <Name>Kit.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Kit\SQLHelper\Kit.SQLHelper.csproj">
+      <Project>{3e553734-43ae-40cc-b8fe-b1e87919e3ac}</Project>
+      <Name>Kit.SQLHelper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\8086VCPU\8086VCPU.csproj">
       <Project>{cb14ea76-bbb5-4d39-ae1d-70dd296d9a2c}</Project>
       <Name>8086VCPU</Name>
@@ -264,5 +267,6 @@
   <ItemGroup>
     <Resource Include="Images\pause.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
