--- a/8086VCPU/8086VCPU.csproj
+++ b/8086VCPU/8086VCPU.csproj
@@ -57,7 +57,6 @@
     <Compile Include="Registros\ParteRegistro.cs" />
     <Compile Include="Registros\Registro.cs" />
     <Compile Include="Registros\Registros.cs" />
-    <Compile Include="Registros\Variable.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Kit\Kit\Kit.Shared.csproj">
@@ -73,6 +72,9 @@
     <PackageReference Include="System.ObjectModel">
       <Version>4.3.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
