--- a/8086VCPU/8086VCPU.csproj
+++ b/8086VCPU/8086VCPU.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>_8086VCPU</RootNamespace>
     <AssemblyName>8086VCPU</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -59,22 +59,18 @@
     <Compile Include="Registros\Registros.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Kit\Kit\Kit.Shared.csproj">
-      <Project>{08b66604-62dc-4c44-9aef-41b124daae33}</Project>
-      <Name>Kit.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kit\SQLHelper\Kit.SQLHelper.csproj">
-      <Project>{3e553734-43ae-40cc-b8fe-b1e87919e3ac}</Project>
-      <Name>Kit.SQLHelper</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="System.ObjectModel">
       <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Kit\Kit\Kit.csproj">
+      <Project>{bfa21779-2497-4399-bc1a-13399f4195d7}</Project>
+      <Name>Kit</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
