--- a/Compilador/Gui.csproj
+++ b/Compilador/Gui.csproj
@@ -8,11 +8,12 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Gui</RootNamespace>
     <AssemblyName>Gui</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,9 +47,6 @@
     <PackageReference Include="Prism.DryIoc" Version="8.0.0.1909" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Kit.Sql">
-      <HintPath>..\..\..\Kit\SQLHelper\bin\Debug\netstandard2.0\Kit.Sql.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -241,13 +239,9 @@
       <Project>{7ad59b8d-fae8-4018-95bd-540156ee43f7}</Project>
       <Name>Kit.WPF</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Kit\Kit\Kit.Shared.csproj">
-      <Project>{08b66604-62dc-4c44-9aef-41b124daae33}</Project>
-      <Name>Kit.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Kit\SQLHelper\Kit.SQLHelper.csproj">
-      <Project>{3e553734-43ae-40cc-b8fe-b1e87919e3ac}</Project>
-      <Name>Kit.SQLHelper</Name>
+    <ProjectReference Include="..\..\..\Kit\Kit\Kit.csproj">
+      <Project>{bfa21779-2497-4399-bc1a-13399f4195d7}</Project>
+      <Name>Kit</Name>
     </ProjectReference>
     <ProjectReference Include="..\8086VCPU\8086VCPU.csproj">
       <Project>{cb14ea76-bbb5-4d39-ae1d-70dd296d9a2c}</Project>
@@ -269,6 +263,7 @@
     <Resource Include="Images\back.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
